--- a/style.css
+++ b/style.css
@@ -56,8 +56,7 @@ span.name, span.year, span.info, span.his{
 div.picto{
     display:flex;
     height: 150px;
-    margin-right: auto;
-    margin-left: auto;
+    justify-content: center;
 }
 
 
